[package]
name = "lowmain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lowmain"
path = "src/main.rs"

[features]
jemalloc = ["agcli/jemalloc"]

[dependencies]
agcli = "0.7.0"
neo4rs = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
